Commited by using jll.Git.sh @ 2020-12-16 17:22:24
Changes as follows:
M  jll.manual.jdk.sh
M  jll.manual.tomcat.sh